[gd_scene load_steps=8 format=2]

[ext_resource path="res://Textures/sp_botão.png" type="Texture" id=1]
[ext_resource path="res://Textures/botão.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Button.gd" type="Script" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 24, 40 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 24, 22 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 24, 1.2 )

[node name="Button" type="AnimatedSprite"]
modulate = Color( 1.5, 1.5, 1.5, 1 )
scale = Vector2( 0.85, 0.85 )
z_index = 2
z_as_relative = false
frames = SubResource( 1 )
script = ExtResource( 3 )

[node name="OkayArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="OkayArea"]
shape = SubResource( 2 )

[node name="GoodArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoodArea"]
shape = SubResource( 3 )

[node name="PerfectArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PerfectArea"]
shape = SubResource( 4 )

[node name="PushTimer" type="Timer" parent="."]
wait_time = 0.02
one_shot = true
[connection signal="area_entered" from="OkayArea" to="." method="_on_OkayArea_area_entered"]
[connection signal="area_exited" from="OkayArea" to="." method="_on_OkayArea_area_exited"]
[connection signal="area_entered" from="GoodArea" to="." method="_on_GoodArea_area_entered"]
[connection signal="area_exited" from="GoodArea" to="." method="_on_GoodArea_area_exited"]
[connection signal="area_entered" from="PerfectArea" to="." method="_on_PerfectArea_area_entered"]
[connection signal="area_exited" from="PerfectArea" to="." method="_on_PerfectArea_area_exited"]
[connection signal="timeout" from="PushTimer" to="." method="_on_PushTimer_timeout"]
